Projet final pour CRIAGI

--- a/parcnv.html
+++ b/parcnv.html
@@ -20,9 +20,9 @@
     <h2>à propos</h2>
     <br>
     <div class="container">
-        <p>Le parc est situér dans l'est de la république démocratique du congo, Les virunga l'un de tresor le plus
-            riches en
-            biodiversite au monde et le plus ancien parc national d'afrique. il abrite plus d'especes de
+        <p>Le parc est situé dans l'est de la république démocratique du congo, Le virunga l'un de tresor le plus
+            riche en
+            biodiversité au monde et le plus ancien parc national d'afrique. il abrite plus d'especes de
             mammiferes, d'oiseaux
             et de reptiles que n'importe quelle autre zone protegée de la planete, y compris trois taxons
             extraordinaires
