Ajout du dossier photo avec les images

--- a/index.html
+++ b/index.html
@@ -22,93 +22,93 @@
     <h2>Explorer les merveilles de la République Démocratique du Congo</h2>
     <div class=" grid-container">
       <div class="card">
-        <img src="./photos/parcnve.jpg" alt="site a visiter">
+        <img src="./photo/parcnve.jpg" alt="site a visiter">
         <h2>Parc National de Virunga</h2>
         <p></p>
         <a href="./parcnv.html" class=" action-btn pro">Explorer</a>
       </div>
       <div class="card">
-        <img src="./photos/chutbc.jpg" alt="site a visiter">
+        <img src="./photo/chutbb.jpg" alt="site a visiter">
         <h2>Les chutes de Boyoma</h2>
         <p></p>
         <a href="leschutdb.html" class=" action-btn pro">Explorer</a>
       </div>
       <div class="card">
-        <img src="./photos/sactbe.jpg" alt="site a visiter">
+        <img src="./photo/sactbe.jpg" alt="site a visiter">
         <h2>Sanctuaire des Bonobos</h2>
         <p></p>
         <a href="sactuairedb.html" class=" action-btn pro">Explorer</a>
       </div>
       <div class="card">
-        <img src="./photos/mussee.jpg" alt="site a visiter">
+        <img src="./photo/mussee.jpg" alt="site a visiter">
         <h2>Musée National de la RDC</h2>
         <p></p>
         <a href="mussen.html" class=" action-btn pro">Explorer</a>
       </div>
       <div class="card">
-        <img src="./photos/chutze.jpg" alt="site a visiter">
+        <img src="./photo/chutze.jpg" alt="site a visiter">
         <h2>Chutes de Zongo de la RDC</h2>
         <p>
         </p>
         <a href="leszutedzo.html" class=" action-btn pro">Explorer</a>
       </div>
       <div class="card">
-        <img src="./photos/parcvne.jpg" alt="site a visiter">
+        <img src="./photo/parcvne.jpg" alt="site a visiter">
         <h2>Parc de la vallée de N'sele</h2>
         <P>
         </P>
         <a href="parcdvn.html" class="action-btn pro">Explorer</a>
       </div>
       <div class="card">
-        <img src="./photos/lacme.jpg" alt="site a visiter">
+        <img src="./photo/lacme.jpg" alt="site a visiter">
         <h2> Le lac ma vallée de Kinshasa</h2>
         <p></p>
         <a href="lacmv.html" class="action-btn pro">Explorer</a>
       </div>
       <div class="card">
-        <img src="./photos/jardine.jpg" alt="site a visiter">
+        <img src="./photo/jardine.jpg" alt="site a visiter">
         <h2>Jardin Botanique de Kinshasa</h2>
         <p></p>
         <a href="jardinb.html" class="action-btn pro">Explorer</a>
       </div>
       <div class="card">
-        <img src="./photos/acadee.jpg" alt="site a visiter">
+        <img src="./photo/acadee.jpg" alt="site a visiter">
         <h2>Académie des Beaux-Arts</h2>
         <p> </p>
         <a href="academie.html" class="action-btn pro">Explorer</a>
       </div>
       <div class="card">
-        <img src="./photos/parcngd.jpg" alt="site a visiter">
+        <img src="./photo/parcngd.jpg" alt="site a visiter">
         <h2>Parc National de Garamba</h2>
         <p></p>
         <a href="parcng.html" class="action-btn pro">Explorer</a>
       </div>
       <div class="card">
-        <img src="./photos/volcana.jpg" alt="site a visiter">
+        <img src="./photo/volcane.jpg" alt="site a visiter">
         <h2>Volcan de Sabyinyo </h2>
         <p></p>
         <a href="volcans.html" class="action-btn pro">Explorer</a>
       </div>
       <div class="card">
-        <img src="./photos/parcnmaie.jpg" alt="site a visiter">
+        <img src="./photo/parcnmaie.jpg" alt="site a visiter">
         <h2>Parc National de Maiko</h2>
         <p> </p>
         <a href="parcndlmai.html" class="action-btn pro">Explorer</a>
       </div>
       <div class="card">
-        <img src="./photos/parcmdme.jpg" alt="site a visiter">
+        <img src="./photo/parcmdme.jpg" alt="site a visiter">
         <h2>Parc Marin des Mangroves</h2>
         <p> </p>
         <a href="parcmdman.html" class="action-btn pro">Explorer</a>
       </div>
       <div class="card">
-        <img src="./photos/parcndulpe.jpg" alt="site a visiter">
+        <img src="./photo/parcndulpe.jpg" alt="site a visiter">
         <h2>Parc National de l'Upemba</h2>
         <p></p>
         <a href="parcndlupe.html" class="action-btn pro">Explorer</a>
       </div>
       <div class="card">
-        <img src="./photos/parcnkbe.jpg" alt="site a visiter">
+        <img src="./photo/parcnkbe.jpg" alt="site a visiter">
         <h2>Parc national de Kahuzi-Biega</h2>
         <p></p>
         <a href="parckb.html" class="action-btn pro">Explorer</a>
