--- a/jardinb.html
+++ b/jardinb.html
@@ -37,10 +37,10 @@
     <br>
     <div class="carousel-container">
         <div class="carousel">
-            <img src="./photos/jardina.jpg" alt="photo site">
-            <img src="./photos/jardinb.jpg" alt="photo site">
-            <img src="./photos/jardinc.jpg" alt="photo site">
-            <img src="./photos/jardind.jpg" alt="photo site">
+            <img src="./photo/jardina.jpg" alt="photo site">
+            <img src="./photo/jardinb.jpg" alt="photo site">
+            <img src="./photo/jardinc.jpg" alt="photo site">
+            <img src="./photo/jardind.jpg" alt="photo site">
         </div>
     </div>
     <br>
