--- a/leschutdb.html
+++ b/leschutdb.html
@@ -42,10 +42,10 @@
     <br>
     <div class="carousel-container">
         <div class="carousel">
-            <img src="./photos/chutba.jpg" alt="photos site">
-            <img src="./photos/chutbb.jpg" alt="photos site">
-            <img src="./photos/chutbc.jpg" alt="photos site">
-            <img src="./photos/chutbd.jpg" alt="photo site">
+            <img src="./photo/chutba.jpg" alt="photos site">
+            <img src="./photo/chutbb.jpg" alt="photos site">
+            <img src="./photo/chutbc.jpg" alt="photos site">
+            <img src="./photo/chutbd.jpg" alt="photo site">
         </div>
     </div>
     <br>
