--- a/leszutedzo.html
+++ b/leszutedzo.html
@@ -31,10 +31,10 @@
     <br>
     <div class="carousel-container">
         <div class="carousel">
-            <img src="./photos/chutza.jpg" alt="photo site">
-            <img src="./photos/chutzb.jpg" alt="photo site">
-            <img src="./photos/chutzc.jpg" alt="photo site">
-            <img src="./photos/chutzd.jpg" alt="photo site">
+            <img src="./photo/chutza.jpg" alt="photo site">
+            <img src="./photo/chutzb.jpg" alt="photo site">
+            <img src="./photo/chutzc.jpg" alt="photo site">
+            <img src="./photo/chutzd.jpg" alt="photo site">
         </div>
     </div>
     <br>
