--- a/mussen.html
+++ b/mussen.html
@@ -33,10 +33,10 @@
     </div>
     <div class="carousel-container">
         <div class="carousel">
-            <img src="./photos/museea.jpg" alt="photo site">
-            <img src="./photos/musseb.jpg" alt="photo site">
-            <img src="./photos/mussec.jpg" alt="photo site">
-            <img src="./photos/mussed.jpg" alt="photo site">
+            <img src="./photo/museea.jpg" alt="photo site">
+            <img src="./photo/musseb.jpg" alt="photo site">
+            <img src="./photo/mussec.jpg" alt="photo site">
+            <img src="./photo/mussed.jpg" alt="photo site">
         </div>
     </div>
     <br>
