--- a/parcdvn.html
+++ b/parcdvn.html
@@ -31,10 +31,10 @@
     <br>
     <div class="carousel-container">
         <div class="carousel">
-            <img src="./photos/parcvna.jpg" alt="photo site">
-            <img src="./photos/parcvnb.jpg" alt="photo site">
-            <img src="./photos/parcvnc.jpg" alt="photo site">
-            <img src="./photos/parcvnd.jpg" alt="photo site">
+            <img src="./photo/parcvna.jpg" alt="photo site">
+            <img src="./photo/parcvnb.jpg" alt="photo site">
+            <img src="./photo/parcvnc.jpg" alt="photo site">
+            <img src="./photo/parcvnd.jpg" alt="photo site">
         </div>
     </div>
     <br>
