--- a/parckb.html
+++ b/parckb.html
@@ -41,10 +41,10 @@
     <br>
     <div class="carousel-container">
         <div class="carousel">
-            <img src="./photos/parcnkba.jpg" alt="photo site">
-            <img src="./photos/parcnkbb.jpg" alt="photo site">
-            <img src="./photos/parcnkbc.jpg" alt="photo site">
-            <img src="./photos/parcnkbd.jpg" alt="photo site">
+            <img src="./photo/parcnkba.jpg" alt="photo site">
+            <img src="./photo/parcnkbb.jpg" alt="photo site">
+            <img src="./photo/parcnkbc.jpg" alt="photo site">
+            <img src="./photo/parcnkbd.jpg" alt="photo site">
         </div>
     </div>
     <br>
