--- a/parcmdman.html
+++ b/parcmdman.html
@@ -35,10 +35,10 @@
     <br>
     <div class="carousel-container">
         <div class="carousel">
-            <img src="./photos/parcmdma.jpg" alt="photo site">
-            <img src="./photos/parcmdmb.jpg" alt="photo site">
-            <img src="./photos/parcmdmc.jpg" alt="photo site">
-            <img src="./photos/parcmdmd.jpg" alt="photo site">
+            <img src="./photo/parcmdma.jpg" alt="photo site">
+            <img src="./photo/parcmdmb.jpg" alt="photo site">
+            <img src="./photo/parcmdmc.jpg" alt="photo site">
+            <img src="./photo/parcmdmd.jpg" alt="photo site">
         </div>
     </div>
     <br>
