--- a/parcndlmai.html
+++ b/parcndlmai.html
@@ -32,10 +32,10 @@
     <br>
     <div class="carousel-container">
         <div class="carousel">
-            <img src="./photos/parcnmaia.jpg" alt="photo site">
-            <img src="./photos/parcnmaib.jpg" alt="photo site">
-            <img src="./photos/parcnmaic.jpg" alt="photo site">
-            <img src="./photos/parcnmaid.jpg" alt="photo site">
+            <img src="./photo/parcnmaia.jpg" alt="photo site">
+            <img src="./photo/parcnmaib.jpg" alt="photo site">
+            <img src="./photo/parcnmaic.jpg" alt="photo site">
+            <img src="./photo/parcnmaid.jpg" alt="photo site">
         </div>
     </div>
     <br>
