--- a/parcndlupe.html
+++ b/parcndlupe.html
@@ -34,10 +34,10 @@
     <br>
     <div class="carousel-container">
         <div class="carousel">
-            <img src="./photos/parcndulpa.jpg" alt="photo site">
-            <img src="./photos/parcndulpb.jpg" alt="photo site">
-            <img src="./photos/parcndulpc.jpg" alt="photo site">
-            <img src="./photos/parcndulpd.jpg" alt="photo site">
+            <img src="./photo/parcndulpa.jpg" alt="photo site">
+            <img src="./photo/parcndulpb.jpg" alt="photo site">
+            <img src="./photo/parcndulpc.jpg" alt="photo site">
+            <img src="./photo/parcndulpd.jpg" alt="photo site">
         </div>
     </div>
     <br>
