--- a/parcng.html
+++ b/parcng.html
@@ -36,10 +36,10 @@
     <br>
     <div class="carousel-container">
         <div class="carousel">
-            <img src="./photos/parcnga.jpg" alt="photo site">
-            <img src="./photos/parcngb.jpg" alt="photo site">
-            <img src="./photos/parcngc.jpg" alt="photo site">
-            <img src="./photos/parcngd.jpg" alt="photo site">
+            <img src="./photo/parcnga.jpg" alt="photo site">
+            <img src="./photo/parcngb.jpg" alt="photo site">
+            <img src="./photo/parcngc.jpg" alt="photo site">
+            <img src="./photo/parcngd.jpg" alt="photo site">
         </div>
     </div>
     <br>
