--- a/parcnv.html
+++ b/parcnv.html
@@ -37,10 +37,10 @@
     <br>
     <div class="carousel-container">
         <div class="carousel">
-            <img src="./photos/parcnva.jpg" alt="photo site">
-            <img src="./photos/parcnvb.jpg" alt="photo site">
-            <img src="./photos/parcnvc.jpg" alt="photo site">
-            <img src="./photos/parcnvd.jpg" alt="photo site">
+            <img src="./photo/parcnva.jpg" alt="photo site">
+            <img src="./photo/parcnvb.jpg" alt="photo site">
+            <img src="./photo/parcnvc.jpg" alt="photo site">
+            <img src="./photo/parcnvd.jpg" alt="photo site">
         </div>
     </div>
     <br>
