--- a/volcans.html
+++ b/volcans.html
@@ -39,10 +39,10 @@
     <br>
     <div class="carousel-container">
         <div class="carousel">
-            <img src="./photos/volcana.jpg" alt="photo site">
-            <img src="./photos/volcanb.jpg" alt="photo site">
-            <img src="./photos/volcanc.jpg" alt="photo site">
-            <img src="./photos/volcand.jpg" alt="photo site">
+            <img src="./photo/volcana.jpg" alt="photo site">
+            <img src="./photo/volcanb.jpg" alt="photo site">
+            <img src="./photo/volcanc.jpg" alt="photo site">
+            <img src="./photo/volcand.jpg" alt="photo site">
         </div>
     </div>
     <br>
