--- a/àpropos.html
+++ b/àpropos.html
@@ -35,8 +35,8 @@
         tandis que l'okapi est un animal unique et endemique de la RDC, souvent considéré comme un trésor national</p>
     <div class="carousel-container">
         <div class="carousel">
-            <img src="./photos/aproposa.jpg" alt="photo site">
-            <img src="./photos/aproposb.jpg" alt="photo site">
+            <img src="./photo/aproposa.jpg" alt="photo site">
+            <img src="./photo/aproposb.jpg" alt="photo site">
         </div>
     </div>
     <h3>àpropos</h3>
