--- a/lacmv.html
+++ b/lacmv.html
@@ -33,10 +33,10 @@
     <br>
     <div class="carousel-container">
         <div class="carousel">
-            <img src="./photos/lacma.jpg" alt="photo site">
-            <img src="./photos/lacmb.jpg" alt="photo site">
-            <img src="./photos/lacmc.jpg" alt="photo site">
-            <img src="./photos/lacmd.jpg" alt="photo site">
+            <img src="./photo/lacma.jpg" alt="photo site">
+            <img src="./photo/lacmb.jpg" alt="photo site">
+            <img src="./photo/lacmc.jpg" alt="photo site">
+            <img src="./photo/lacmd.jpg" alt="photo site">
         </div>
     </div>
     <br>
