--- a/sactuairedb.html
+++ b/sactuairedb.html
@@ -33,10 +33,10 @@
     <br>
     <div class="carousel-container">
         <div class="carousel">
-            <img src="./photos/sactba.jpg" alt="photo site">
-            <img src="./photos/sactbb.jpg" alt="photo site">
-            <img src="./photos/sactbc.jpg" alt="photo site">
-            <img src="./photos/sactbd.jpg" alt="photo site">
+            <img src="./photo/sactba.jpg" alt="photo site">
+            <img src="./photo/sactbb.jpg" alt="photo site">
+            <img src="./photo/sactbc.jpg" alt="photo site">
+            <img src="./photo/sactbd.jpg" alt="photo site">
         </div>
     </div>
     <br>
